--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -5,23 +5,6 @@
     padding-bottom: 120px;
 }
 
-.container {
-    min-width: 320px;
-    padding-left: 16px;
-    padding-right: 16px;
-    margin: 0 auto;
-    background-color: green;
-    }
-
-@media screen and (min-width: 768px) {
-    .container {
-            min-width: 768px;
-            padding-left: 16px;
-            padding-right: 16px;
-            background-color: red;
-        }
-}
-
 @media screen and (min-width: 1128px) {
     .container {
         min-width: 1128px;
@@ -31,119 +14,28 @@
     }
 }
 
-/* header menu */
-
-header {
-    border-bottom: 1px solid #e7e9fc;
-    display: flex;
-    align-items: flex-start;
-    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
-}
-
 .header-logo {
-    display: flex;
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-        font-size: 18px;
-        line-height: 1.17;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: #4d5ae5;
-        text-decoration: none;
-        padding: 24px 0;
-        margin-right: 76px;
-    }
-
-.logo-contrast {
-    color: #2e2f42;
+    margin-right: 76px;
 }
 
-.nav-buttons {
+.header-contact-list {
     display: flex;
     align-items: center;
-    margin-right: 332px;
-}
-
-.header-container {
-    width: 1158px;
-    display: flex;
-align-items: center;
-}
-
-.header-menu-list {
-    font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #2e2f42;
-        text-decoration: none;
-        list-style: none;
-        display: flex;
-               gap: 40px;
+    gap: 40px;
 }
 
 .header-menu-item {
 
 }
 
-.header-menu-link.current {
-position: relative;
-color: #404bbf;
-}
-
-.header-contact-list {
-    display: flex;
-    gap: 40px;
-}
-
-.header-menu-link {
-    color: #2e2f42;
-    padding: 24px 0;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-menu-link:hover,
-.header-menu-link:focus {
-    color: #404bbf;
-}
-
-.header-menu-link.current::after {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 4px;
-    left: 0;
-    bottom: -1px;
-    background-color: #404bbf;
-    border-radius: 2px;
-}
-
-.header-contact {
-    font-style: normal;
-    display: flex;
-align-items: center;
-}
-
 .header-contact-item {
-    font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #434455;
-        text-decoration: none;
-            list-style: none;
-            font-style: normal;
-}
-
-.header-contact-link {
-    color:#434455;
+    display: block;
     padding: 24px 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-contact-link:hover,
-.header-contact-link:focus {
-color: #404bbf;
 }
 
 /* hero */
