--- a/css/styles.css
+++ b/css/styles.css
@@ -28,10 +28,18 @@ ol {
     list-style: none;
 }
 
+a {
+    text-decoration: none;
+}
+
 img {
     display: block;
     max-width: 100%;
     height: auto;
+}
+
+button {
+    cursor: pointer;
 }
 
 .visually-hidden {
@@ -51,9 +59,145 @@ img {
 /* common */
 
 .container {
-    min-width: 320px;
+    max-width: 320px;
     padding-left: 16px;
     padding-right: 16px;
     margin: 0 auto;
-    background-color: green;
+}
+
+@media screen and (min-width:768px) {
+    .container {
+        max-width: 768px;
+    }
+}
+
+@media screen and (min-width:1158px) {
+    .container {
+        max-width: 1158px;
+        padding: 0 15px;
+    }
+}
+
+/* header menu */
+
+header {
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header-menu-list, .header-contact {
+    display: none;
+}
+
+.logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+
+.header-logo {
+    padding: 16px 0;
+    display: block;
+}
+
+.logo-contrast {
+    color: #2e2f42;
+}
+
+.burger-btn {
+    padding: 0;
+    border: none;
+    background-color: transparent;
+
+}
+
+.burger-icon {
+    display: block;
+    fill: #2f2f37;
+}
+
+@media screen and (min-width: 768px) {
+.burger-btn {
+display: none;
+}
+
+.nav-buttons {
+display: flex;
+align-items: center;
+}
+
+.header-menu-list {
+display: flex;
+align-items: center;
+gap: 40px;
+}
+
+.header-logo {
+padding: 24px 0;
+margin-right: 120px;
+}
+
+.header-contact {
+font-style: normal;
+display: block;
+}
+
+.header-menu-link {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-menu-link.current {
+    position: relative;
+}
+
+.header-menu-link.current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
+}
+
+.header-contact-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.header-contact-item {
+    display: block;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-menu-link:hover,
+.header-menu-link:focus,
+.header-contact-link:hover,
+.header-contact-link:focus {
+    color: #404bbf;
+}
+
+
 }
