--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 main {
-    flex-grow: 1;
+    /* flex-grow: 1; */
 }
 
 h1,
@@ -187,7 +187,7 @@ display: block;
     display: block;
     font-size: 12px;
     line-height: 1.17;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.04em;
     color: #434455;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -198,6 +198,24 @@ display: block;
 .header-contact-link:focus {
     color: #404bbf;
 }
-
-
 }
+
+@media screen and (min-width:1158px) {
+    .header-logo {
+            margin-right: 76px;
+        }
+
+.header-contact-list {
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
+}
+
+.header-contact-item {
+    padding: 24px 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+}
+
