--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -443,8 +443,7 @@ font-weight: 400;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-    transition-property: opacity, visibility;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
