--- a/css/styles.css
+++ b/css/styles.css
@@ -261,3 +261,81 @@ display: block;
         display: none;
     }
 }
+
+/* HERO */
+
+
+.hero {
+    background-color: #2e2f42;
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin: auto;
+    padding-top: 72px;
+    padding-bottom: 72px;
+}
+
+.hero-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.hero-title {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
+    margin-bottom: 72px;
+    max-width: 168px;
+}
+
+.hero-btn {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
+    background: #4d5ae5;
+    display: block;
+    border-radius: 4px;
+    min-width: 169px;
+    height: 56px;
+    border: 0;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero-btn:hover,
+.hero-btn:focus {
+    background-color: #404BBF;
+}
+
+@media screen and (min-width: 768px) {
+    .hero {
+            padding-top: 112px;
+            padding-bottom: 112px;
+            width: 100%;
+        }
+
+.hero-title {
+    font-size: 56px;
+    line-height: 1.07;
+    max-width: 496px;
+    margin-bottom: 36px;
+}
+}
+
+@media screen and (min-width:1158px) {
+.hero {
+        padding-top: 188px;
+        padding-bottom: 188px;
+    }
+
+.hero-title {
+    font-size: 56px;
+    line-height: 1.07;
+    margin-bottom: 48px;
+}
+}
