--- a/css/styles.css
+++ b/css/styles.css
@@ -56,12 +56,22 @@ button {
     overflow: hidden;
 }
 
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
 /* common */
 
 .container {
     max-width: 320px;
     padding: 0 16px;
     margin: 0 auto;
+}
+
+.section {
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 
 @media screen and (min-width:768px) {
@@ -75,6 +85,11 @@ button {
         max-width: 1158px;
         padding: 0 15px;
     }
+
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 }
 
 /* header menu */
@@ -182,7 +197,7 @@ display: block;
     gap: 12px;
 }
 
-.header-contact-item {
+.header-contact-link {
     display: block;
     font-size: 12px;
     line-height: 1.17;
@@ -267,7 +282,7 @@ display: block;
 
 .hero {
     background-color: #2e2f42;
-    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg.jpg);
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg/bg-tel.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -275,6 +290,11 @@ display: block;
     padding-top: 72px;
     padding-bottom: 72px;
 }
+
+@media (min-resolution: 192dpi) {
+    .hero { background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg/bg-tel@2x.jpg);
+    }
+    }
 
 .hero-container {
     display: flex;
@@ -298,7 +318,7 @@ display: block;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
-    background: #4d5ae5;
+    background-color: #4d5ae5;
     display: block;
     border-radius: 4px;
     min-width: 169px;
@@ -317,7 +337,14 @@ display: block;
             padding-top: 112px;
             padding-bottom: 112px;
             width: 100%;
+                background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg/bg-tablet.jpg);
         }
+
+@media (min-resolution: 192dpi) {
+    .hero {
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg/bg-tablet@2x.jpg);
+    }
+}
 
 .hero-title {
     font-size: 56px;
@@ -331,11 +358,305 @@ display: block;
 .hero {
         padding-top: 188px;
         padding-bottom: 188px;
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg/bg-desk.jpg);
     }
 
+
+@media (min-resolution: 192dpi) {
+    .hero {
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg/bg-desk@2x.jpg);
+    }
+}
 .hero-title {
     font-size: 56px;
     line-height: 1.07;
     margin-bottom: 48px;
 }
 }
+
+/* ADVANTAGES */
+
+.icons-wrapper {
+    display: none;
+}
+
+.advantages-subtitle {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.benefits-item-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+@media screen and (max-width: 767px) {
+    .advantages-item:not(:last-child) {
+     margin-bottom: 72px;
+    }
+    
+}
+
+@media screen and (min-width: 768px) {
+
+.advantages-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+}
+
+    .advantages-subtitle {
+            font-weight: 700;
+            font-size: 36px;
+            text-align: left;
+        }
+
+.benefits-item-text {
+    max-width: 356px;
+}
+}
+
+@media screen and (min-width:1158px) {
+
+.advantages-container {
+        padding-left: 156px;
+        padding-right: 156px;
+    }
+
+    .advantages-list {
+        align-items: center;
+        justify-content: center;
+        flex-wrap: nowrap;
+        gap: 24px;
+    }
+
+    .advantages-item {
+        /* width: calc((100%-72px)/3); */
+        min-width: 264px;
+    }
+
+    .icons-wrapper {
+            border: 1px solid #8e8f99;
+            border-radius: 4px;
+            height: 112px;
+            background-color: #f4f4fd;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 8px;
+        }
+    
+    .advantages-subtitle {
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 1.2;
+        }
+    
+        .benefits-item-text {
+            font-weight: 400;
+        }
+}
+
+/* TEAM */
+
+.team {
+    background: #f4f4fd;
+}
+
+.team-title {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-align: center;
+    padding-bottom: 72px;
+}
+
+.team-item {
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+@media screen and (max-width: 767px) {
+.team-item:not(:last-child) {
+        margin-bottom: 72px;
+    }
+}
+
+.team-frame {
+    background: #fff;
+    gap: 8px;
+    padding: 32px 0;
+}
+
+.team-subtitle {
+    text-align: center;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
+
+.team-item-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.icons-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.icons-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: #4d5ae5;
+    fill: #f4f4fd;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icons-link:hover,
+.icons-link:focus {
+    background-color: #404bbf;
+}
+
+@media screen and (min-width: 768px) {
+    .team-list {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+            gap: 64px 24px;
+        }
+}
+
+/* PORTFOLIO */
+
+.portfolio-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+}
+
+.portfolio-frame {
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
+}
+
+/* .portfolio-item {
+box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+} */
+
+@media screen and (max-width: 767px) {
+    .portfolio-item:not(:last-child) {
+        margin-bottom: 48px;
+    }
+}
+
+.portfolio-subtitle {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
+
+.portfolio-item-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+@media screen and (max-width: 1157px) {
+    .overlay {
+            display: none;
+        }
+}
+
+@media screen and (min-width: 768px) {
+.portfolio-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 48px 24px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+
+.portfolio-item {
+    position: relative;
+    width: calc((100% - 120px) / 6);
+    min-width: 360px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+        0 1px 1px 0 rgba(46, 47, 66, 0.16),
+        0 1px 6px 0 rgba(46, 47, 66, 0.08);
+        cursor: pointer;
+}
+
+.portfolio-item:hover .overlay {
+    opacity: 1;
+    transform: translateY(0%);
+}
+
+.thumb {
+    position: relative;
+    overflow: hidden;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 360px;
+    height: 300px;
+    background-color: #4d5ae5;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    overflow: auto;
+    padding: 40px 32px;
+    opacity: 0;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: 100%;
+    height: 100%;
+}
+}
+
+/* FOOTER */
+
