--- a/css/styles.css
+++ b/css/styles.css
@@ -376,6 +376,10 @@ display: block;
 
 /* ADVANTAGES */
 
+.advantages-container .{
+    width: 320px;
+}
+
 .icons-wrapper {
     display: none;
 }
@@ -469,6 +473,7 @@ display: block;
 
 .team {
     background: #f4f4fd;
+    /* width: 320px; */
 }
 
 .team-title {
@@ -480,15 +485,35 @@ display: block;
     padding-bottom: 72px;
 }
 
+.team-list {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
 .team-item {
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
+.team-item {
+    max-width: 288px;
+}
+
+/* .icons-list {
+    object-fit: contain;
+} */
+
 @media screen and (max-width: 767px) {
 .team-item:not(:last-child) {
         margin-bottom: 72px;
     }
+
+/* .team-item {
+    max-width: 264px;
+} */
 }
 
 .team-frame {
@@ -543,6 +568,7 @@ display: block;
 @media screen and (min-width: 768px) {
     .team-list {
             display: flex;
+            flex-direction: row;
             flex-wrap: wrap;
             align-items: center;
             justify-content: center;
@@ -568,11 +594,7 @@ display: block;
     border-left: 1px solid #e7e9fc;
     border-right: 1px solid #e7e9fc;
     padding: 32px 16px;
-}
-
-/* .portfolio-item {
-box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-} */
+} 
 
 @media screen and (max-width: 767px) {
     .portfolio-item:not(:last-child) {
@@ -600,6 +622,10 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 @media screen and (max-width: 1157px) {
     .overlay {
             display: none;
+        }
+
+        .portfolio-item {
+            box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
         }
 }
 
@@ -659,4 +685,195 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 }
 
 /* FOOTER */
+
+.footer {
+    background-color: #2e2f42;
+    padding-top: 96px;
+    padding-bottom: 96px;
+}
+
+.footer-container {
+    display: flex;
+    flex-direction: row;
+    gap: 72px;
+    justify-content: center;
+    align-items: baseline;
+}
+
+@media screen and (max-width: 1157px) {
+    .footer-container {
+            flex-wrap: wrap;
+}
+}
+
+.footer-logo {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 16px;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+
+.footer-logo-contrast {
+    color: #f4f4fd;
+}
+
+.footer-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    max-width: 264px;
+}
+
+.footer-social {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+.icons-list-footer {
+        gap: 16px;
+    }
+
+.subscribe-field {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    width: 288px;
+    height: 40px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+    padding-left: 16px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #fff;
+}   
+
+.subscribe-field::placeholder {
+    color: #fff;
+
+}
+
+.subscribe-field:focus {
+    outline: transparent;
+    box-shadow: none;
+    border: 1px solid #31d0aa;
+    background-color: rgba(49, 208, 170, 0.1);
+}
+
+.subscribe-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
+
+.subscribe-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    border-radius: 4px;
+    min-width: 165px;
+    height: 40px;
+    background: #4d5ae5;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-icon {
+    fill: #fff;
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus,
+.footer-icons-link:hover,
+.footer-icons-link:focus {
+    background-color: #31d0aa;
+}
+
+@media screen and (min-width: 768px) {
+   .footer {
+    padding-left: 108px;
+    padding-right: 108px;
+   }
+   
+   .footer-container {
+    display: flex;
+    justify-content: flex-start;
+    max-width: 768px;
+    gap: 72px 24px;
+    
+   }
+
+   .social-links-footer {
+    max-width: 208px;
+   }
+
+    .subscribe-field {
+        width: 264px;
+    }
+
+        .subscribe-form {
+            display: flex;
+                align-items: flex-start;
+            flex-direction: row;
+            gap: 24px;
+        }
+
+.footer-logo, .footer-social, .subscribe-text {
+    display: flex;
+    justify-content: left;
+}
+}
+
+@media screen and (min-width: 1158px) {
+    .footer {
+            padding-top: 100px;
+            padding-bottom: 100px;
+        }
+
+        .footer-container {
+            display: flex;
+            max-width: 1158px;
+        }
+
+.footer-descr {
+    margin-right: 120px;
+}
+
+.social-links-footer {
+margin-right: 80px;
+}
+
+.footer-text {
+    min-width: 264px;
+}
+
+.footer-container {
+    gap: unset;
+}
+}
 
